# pico-keys-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv  pico_hsm_sdk_import.cmake  pico_keys_sdk_import.cmake  picokeys_sdk_import.cmake  sdkconfig.defaults
cmake/: boards.cmake  build_helpers.cmake  deps.cmake  dict.cmake  openssl.cmake  options.cmake  plugin.cmake  trusted.cmake  version.cmake
config/: mbedtls_config.h
config/esp32/: partitions.csv
config/esp32/components/cjson/: CMakeLists.txt
config/esp32/components/libcvc/: CMakeLists.txt
config/esp32/components/mldsa44/: CMakeLists.txt
config/esp32/components/mldsa65/: CMakeLists.txt
config/esp32/components/mldsa87/: CMakeLists.txt
config/esp32/components/mlkem1024/: CMakeLists.txt
config/esp32/components/mlkem512/: CMakeLists.txt
config/esp32/components/mlkem768/: CMakeLists.txt
config/esp32/components/pico-keys-sdk/: CMakeLists.txt
config/esp32/components/tinycbor/: CMakeLists.txt
config/mldsa/: mldsa_native_all.h  mldsa_native_config.h
config/mlkem/: mlkem_native_all.h  mlkem_native_config.h
config/rp2350/: pt.json  secure_boot.json
config/rp2350/alt/: sha256_alt.c  sha256_alt.h
config/rp2350/ld/: trusted_region.ld  trusted_state.ld
src/: CMakeLists.txt  apdu.c  apdu.h  asn1.c  asn1.h  audit.c  audit.h  board.h  button.c  button.h  compat.h  crypto_utils.c  crypto_utils.h  debug.h  eac.c  eac.h  esp_compat.h  hsm.h  hsm_version.h  idf_component.yml  json.h  main.c  pico_keys.h  pico_keys_version.h  pico_time.c  pico_time.h  picokeys.h  picokeys_version.h  pthread_win32.h  queue.h  rescue.c  semaphore_win32.h  serial.c  serial.h  signal.c  signal.h  tlv.c  tlv.h  trusted.c  trusted.h  (+4 more)
src/ccid/: asn1.c  asn1.h  ccid2040.c  ccid2040.h  ccid_version.h  crypto_utils.c  crypto_utils.h  eac.c  eac.h  version.h
src/compat/: board.h  esp_compat.h  pthread_win32.h  queue.h  semaphore_win32.h
src/fs/: file.c  file.h  files.c  flash.c  flash.h  low_flash.c  mman.c  mman.h  object_container.c  object_container.h  object_crypto_provider.c  object_crypto_provider.h  object_policy.c  object_policy.h  object_store.c  object_store.h  object_store_txn.c  otp.c  otp.h  phy.c  phy.h
src/led/: led.c  led.h  led_cyw43.c  led_neopixel.c  led_pico.c  led_pimoroni.c  led_rp2350_one.c  led_ws2812.c
src/otp/: otp.c  otp.h  otp_emulation.c  otp_esp32.c  otp_linux.c  otp_macos.c  otp_platform.h  otp_rp2040.c  otp_rp2350.c  otp_windows.c
src/plugin/: core_plugin_region_assert.ld  picokeys_plugin_api.h  plugin_loader.c
src/rng/: hwrng.c  hwrng.h  neug.c  neug.h  random.c  random.h
src/trusted/: trusted.c  trusted.h  trusted_mem.c  trusted_pico_sha256.c
src/usb/: ccid.h  tusb_config.h  usb.c  usb.h  usb_common.h  usb_descriptors.c  usb_descriptors.h
src/usb/ccid/: ccid.c  ccid.h  usb_common.h.notused  usb_descriptors.c
src/usb/emulation/: emulation.c  emulation.h  openssl.c
src/usb/hid/: ctap_hid.h  hid.c  tusb_config.h  u2f_hid.h  usb_descriptors.c
src/usb/lwip/: lwip.c  lwipopts.h  rest.c  rest.h  rest_server.c  rest_server.h  rest_server_tls.c  rest_server_tls.h  tusb_config.h
tests/: CMakeLists.txt  object_crypto_provider_test.c  object_policy_test.c  object_store_test.c
